--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,8 @@
         "allowJs": true,
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
+        "paths": {
+            "store*": ["./src/store/"]
+        }
     }
 }
